testdata/invalid/unknown_method.sol
rise A {
    public ray foo(int x) {
        emit x;
    }
}

var a A = new A(1);
a.bar(2);
